--- a/appunti.html
+++ b/appunti.html
@@ -3,32 +3,166 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Appunti</title>
+    <title>EcoVita - Appunti</title>
     <style>
-        body { font-family: Arial, sans-serif; line-height: 1.6; margin: 0; padding: 20px; }
-        h1 { color: #333; }
-        ul { list-style-type: none; padding: 0; }
-        li { margin-bottom: 10px; }
-        a { color: #1a73e8; text-decoration: none; }
-        a:hover { text-decoration: underline; }
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f4f8;
+            color: #333;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        nav {
+            background-color: #333;
+            padding: 10px 0;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            text-align: center;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s ease;
+        }
+        nav ul li a:hover {
+            color: #4CAF50;
+        }
+        .appunti-list {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-top: 2em;
+        }
+        .appunto-item {
+            flex-basis: calc(33.333% - 20px);
+            margin-bottom: 20px;
+            background-color: white;
+            border-radius: 10px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            overflow: hidden;
+            transition: transform 0.3s ease;
+        }
+        .appunto-item:hover {
+            transform: translateY(-5px);
+        }
+        .appunto-item a {
+            display: block;
+            padding: 20px;
+            color: #333;
+            text-decoration: none;
+        }
+        .appunto-item h2 {
+            margin-top: 0;
+            color: #4CAF50;
+        }
+        #info {
+            background-color: #e9f5e9;
+            border-radius: 10px;
+            padding: 20px;
+            margin-top: 2em;
+        }
+        .back-link {
+            display: inline-block;
+            margin-top: 2em;
+            color: #4CAF50;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .back-link:hover {
+            text-decoration: underline;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            margin-top: 2em;
+        }
     </style>
 </head>
 <body>
-    <h1>Appunti</h1>
-    <ul>
-        <li><a href="#" onclick="showInfo('Matematica', '20€', '123-456-7890')">Matematica</a></li>
-        <li><a href="#" onclick="showInfo('Fisica', '25€', '098-765-4321')">Fisica</a></li>
-        <li><a href="#" onclick="showInfo('Chimica', '22€', '111-222-3333')">Chimica</a></li>
-    </ul>
-    <div id="info"></div>
-    <p><a href="index.html">Torna alla home</a></p>
+    <header>
+        <div class="container">
+            <h1>EcoVita - Appunti</h1>
+        </div>
+    </header>
+    
+    <nav>
+        <div class="container">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="appunti.html">Appunti</a></li>
+                <li><a href="biologico.html">Biologico</a></li>
+                <li><a href="#contatti">Contatti</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="appunti-list">
+            <div class="appunto-item">
+                <a href="#" onclick="showInfo('Matematica', '20€', '123-456-7890')">
+                    <h2>Matematica</h2>
+                    <p>Appunti di matematica per tutti i livelli</p>
+                </a>
+            </div>
+            <div class="appunto-item">
+                <a href="#" onclick="showInfo('Fisica', '25€', '098-765-4321')">
+                    <h2>Fisica</h2>
+                    <p>Concetti fondamentali di fisica spiegati in modo chiaro</p>
+                </a>
+            </div>
+            <div class="appunto-item">
+                <a href="#" onclick="showInfo('Chimica', '22€', '111-222-3333')">
+                    <h2>Chimica</h2>
+                    <p>Appunti dettagliati su reazioni e composti chimici</p>
+                </a>
+            </div>
+        </div>
+
+        <div id="info"></div>
+
+        <a href="index.html" class="back-link">Torna alla home</a>
+    </div>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 EcoVita. Tutti i diritti riservati.</p>
+        </div>
+    </footer>
 
     <script>
         function showInfo(materia, costo, contatto) {
             document.getElementById('info').innerHTML = `
                 <h2>${materia}</h2>
-                <p>Costo: ${costo}</p>
-                <p>Contatto: ${contatto}</p>
+                <p><strong>Costo:</strong> ${costo}</p>
+                <p><strong>Contatto:</strong> ${contatto}</p>
+                <p>Per maggiori informazioni o per acquistare questi appunti, contattaci utilizzando il numero fornito.</p>
             `;
         }
     </script>
